Avancement patch + getter
