# backend/MeetMyBarApi/src/main/resources/swagger/meetMyBarSwagger.yaml
@@ -5,7 +5,7 @@ info:
   title: meetMyBarSwagger
   version: '1.0'
   summary: Meet my bar
-  description: "Meet My Bar est une application mobile Android qui permet de repérer les bars autour de soi et d'avoir des informations pratiques comme le prix de la bière la moins chère. Il sera possible de rechercher un bar par son nom, par un type de bière ou par tranche de prix pour les bières. Il est possible de se connecter  et de remplir ses infos personnelles et d’ajouter des amis sur l’application. Ajouter des amis permet d’avoir accès à leur favori et d’être ajouté à des événements créés pour une sortie dans un des bars présents. Les bars possèdent des évènements où l’utilisateur peut choisir si l'événement est visible par tous ou seulement pas ses invités ( au sein de ses amis ). Un événement est propre à un bar et à une date et heure précise. L’application est renseignée par ses utilisateurs, chaque user peut créer un bar et renseigner les informations qui lui correspondent, il est ensuite disponible pour les autres utilisateurs.\r\nIl peut également mettre à jour les données du bar avec le nouveaux prix de la bière, ses horaires d’ouverture/fermeture.\r\n"
+  description: "Meet My Bar est une application mobile Android qui permet de repérer les bars autour de soi et d'avoir des informations pratiques comme le prix de la bière la moins chère. Il sera possible de rechercher un bar par son nom, par un type de bière ou par tranche de prix pour les bières. Il est possible de se connecter  et de remplir ses infos personnelles et d'ajouter des amis sur l'application. Ajouter des amis permet d'avoir accès à leur favori et d'être ajouté à des événements créés pour une sortie dans un des bars présents. Les bars possèdent des évènements où l'utilisateur peut choisir si l'événement est visible par tous ou seulement pas ses invités ( au sein de ses amis ). Un événement est propre à un bar et à une date et heure précise. L'application est renseignée par ses utilisateurs, chaque user peut créer un bar et renseigner les informations qui lui correspondent, il est ensuite disponible pour les autres utilisateurs.\r\nIl peut également mettre à jour les données du bar avec le nouveaux prix de la bière, ses horaires d'ouverture/fermeture.\r\n"
   contact:
     name: ''
 servers:
@@ -443,6 +443,27 @@ paths:
       operationId: delete-scheduleday-scheduledayId
       x-stoplight:
         id: d5c8ca97vpl17
+  '/photos/download/bar/{id}':
+    get:
+      summary: Télécharger les photos d'un bar
+      parameters:
+        - name: id
+          in: path
+          required: true
+          schema:
+            type: integer
+      responses:
+        '200':
+          description: Photos téléchargées avec succès
+          content:
+            application/octet-stream:
+              schema:
+                type: array
+                items:
+                  type: string
+                  format: binary
+        '500':
+          description: Erreur serveur interne
 components:
   schemas:
     Bar:
